--- a/index.html
+++ b/index.html
@@ -293,7 +293,10 @@
         }
         footer{
             text-align: center;
-           
+            margin: 0;
+            color: black;
+            text-align: center;
+             padding:0;
         }
 }
   
