--- a/index.html
+++ b/index.html
@@ -300,14 +300,14 @@
         }
 }
   
-   /* footer {
+   footer {
         margin: 0;
         color: black;
         text-align: center;
         padding:0;
         
     }
-    */
+    
     </style>
     <div class="container">
         <div class="row">
